--- a/faice.css
+++ b/faice.css
@@ -7,53 +7,65 @@ body
  font-family:"lucida grande",tahoma,verdana,arial,sans-serif;
  background: linear-gradient(white, #D3D8E8);
 }
-#header_wrapper
+.header_wrapper
 {
  width:100%;
  min-width:980px;
- background-color:#4c66a4;
+ background-color:#3b5998;
 }
-#header
+
+.login input[type=submit] 
+{
+    font-family:'lucida grande',tahoma,verdana,arial,sans-serif;
+    font-size:11px;
+    cursor:pointer;color:#fff;
+    font-weight:bold;line-height:13px;
+    background-color:#5b74a8;
+    padding:3px 5px;
+    border:1px solid;
+    border-color: #29447e #29447e #1a356e;
+}
+.header
 {
  width:980px;
  margin:0px auto;
  padding:0px;
  height:85px;
 }
-#header li
+.header li
 {
  list-style-type:none;
  float:left;
  text-align:left;
  color:white;
 }
-#header #sitename
+.header .sitename
 {
  margin-top:25px;
 }
-#header #sitename a
+.header .sitename a
 {
  color:white;
  text-decoration:none;
  font-size:30px;
  font-weight:900;
 }
-#header form
+.header form
 {
  margin-top:15px;
  float:right;
 }
-#header form li
+.header form li
 {
  font-size:13px;
  margin-left:15px;
 }
-#header form li a
+.header form li a
 {
  color:#A9BCF5;
  text-decoration:none;
 }
-#header form input[type="text"]
+.header form input[type="text"]
 {
  margin-top:3px;
  margin-bottom:3px;
@@ -62,7 +74,7 @@ body
  height:25px;
  padding-left:3px;
 }
-#header form input[type="password"]
+.header form input[type="password"]
 {
  margin-top:3px;
  margin-bottom:3px;
@@ -71,33 +83,33 @@ body
  height:25px;
  padding-left:3px;
 }
-#header form input[type="submit"]
+.header form input[type="submit"]
 {
  height:25px;
  margin-top:20px;
- background-color:#084B8A;
+ background-color:navy;
  color:white;
- border:1px solid #08298A;
+ border:1px solid navy;
 }
-#wrapper
+.wrapper
 {
  margin:0 auto;
  padding:0px;
  text-align:center;
  width:980px;
 }
-#wrapper div
+.wrapper div
 {
  float:left;
  font-family: helvetica, arial, sans-serif;
 }
-#wrapper #div1
+.wrapper .div1
 {
  margin-top:30px;
  width:590px;
  text-align:left;
 }
-#wrapper #div1 p
+.wrapper .div1 p
 {
  font-size:20px;
  font-family:arial;
@@ -105,38 +117,38 @@ body
  margin:0px;
  color:#0e385f;
 }
-#wrapper #div2
+.wrapper .div2
 {
  margin-top:10px;
  width:390px;
  text-align:left;
 }
-#wrapper #div2 h1
+.wrapper .div2 h1
 {
  margin:0px;
  font-size:37px;
  color:#2E2E2E;
 }
-#wrapper #div2 p
+.wrapper .div2 p
 {
  font-size:18px;
  color:#2E2E2E;
 }
-#wrapper #div2 li
+.wrapper .div2 li
 {
  list-style-type:none;
  margin-top:10px;
 }
-#wrapper #div2 li #firstname
+.wrapper .div2 li .firstname
 {
  width:49%;
 }
-#wrapper #div2 li #surname
+.wrapper .div2 li .surname
 {
  margin-left:2%;
  width:49%;
 }
-#wrapper #div2 li input[type="text"]
+.wrapper .div2 li input[type="text"]
 {
  width:100%;
  height:40px;
@@ -145,7 +157,7 @@ body
  font-size:18px;
  border:1px solid #BDBDBD;
 }
-#wrapper #div2 li input[type="password"]
+.wrapper .div2 li input[type="password"]
 {
  width:100%;
  height:40px;
@@ -154,12 +166,12 @@ body
  font-size:18px;
  border:1px solid #BDBDBD;
 }
-#wrapper #div2 li select
+.wrapper .div2 li select
 {
  padding:4px;
  float:left;
 }
-#wrapper #div2 li a
+.wrapper .div2 li a
 {
  margin-left:10px;
  width:150px;
@@ -170,26 +182,26 @@ body
  vertical-align: middle;
  line-height:15px;
 }
-#wrapper #div2 li a:hover
+.wrapper .div2 li a:hover
 {
  text-decoration:underline;
 }
-#wrapper #div2 li
+.wrapper #div2 li
 {
  color:#2E2E2E;
  font-size:18px;
 }
-#wrapper #div2 #terms
+.wrapper .div2 .terms
 {
  color:#424242;
  font-size:11px;
 }
-#wrapper #div2 #terms a
+.wrapper .div2 .terms a
 {
  display:inline;
  margin:0px;
 }
-#wrapper #div2 li input[type="submit"]
+.wrapper .div2 li input[type="submit"]
 {
  width:205px;
  height:45px;
@@ -211,68 +223,26 @@ body
  position: relative;
  text-shadow: 0 1px 2px rgba(0,0,0,.5);
 }
-#wrapper #div2 #create_page
+.wrapper .div2 .create_page
 {
  color:#424242;
  font-size:13px;
  font-weight:bold;
 }
-#wrapper #div2 #create_page a
+.wrapper .div2 .create_page a
 {
  display:inline;
  margin:0px;
  font-size:13px;
 }
-#footer_wrapper
+
+
+.butn [type="submit"]
 {
- width:100%;
- clear:both;
- float:left;
- margin-top:30px;
- min-width:995px;
- background-color:white;
- text-align:left;
-}
-#footer1
-{
- width:980px;
- margin:0px auto;
- padding:0px;
- border-bottom:1px solid #E6E6E6;
- height:30px;
- line-height:30px;
- font-size:12px;
- color:#848484;
-}
-#footer1 a
-{
- color:#365899;
- display:inline;
- margin-left:10px;
- text-decoration:none;
-}
-#footer1 a:hover
-{
- text-decoration:underline;
-}
-#footer2
-{
- width:980px;
- margin:0px auto;
- padding:0px;
- font-size:12px;
- color:#848484;
-}
-#footer2 a
-{
- color:#365899;
- display:inline-block;
- margin:5px;
- margin-left:0px;
- min-width:80px;
- text-decoration:none;
-}
-#footer2 a:hover
-{
- text-decoration:underline;
+    height:25px;
+    margin-top:20px;
+    background-color:navy;
+    color:white;
+    border:1px solid navy;
+
 }
