--- a/faice.css
+++ b/faice.css
@@ -246,3 +246,18 @@ body
     border:1px solid navy;
 
 }
+.signbut
+{
+    font-size: 19px;
+    letter-spacing: 1px;
+    color: #fff;
+    min-width: 194px;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 1px solid;
+    border-color: #3b6e22 #3b6e22 #2c5115;
+    text-align: center;
+    padding: 7px 20px;
+}
